.. $Id$
.. $Author$
.. $Date$

Release Notes
=============

Trunk

* Make ndsplineeval_deriv2() actually work, and add test for same
* Add a regression test for cfitter
* Update FITS detection to prefer astropy.io.fits
* Update fitting scripts to deal with clsim FITS tables
* Expose I3SplineTable extents and ndim to Python

  -- Jakob van Santen
  
* Skip wavelength-range factor when normalizing tables in memory (clsim does
  it correctly internally now)
  
  -- Marcel Usner

* Various fixes to follow build system churn and keep static analysis happy

  -- Kevin Meagher, Don La Dieu

April 18, 2015 Meike de With (meike.de.with@desy.de)
--------------------------------------------------------------------

Release V00-10-01

* Deal with NaN data in pyglam
* Small code changes to fix warnings
* Fix memory leaks in spglam
* Rewrite blossom convolution in a slightly more memory-efficient way
* Save all attributes as header keys instead of only a few

  -- Jakob van Santen


April 3, 2015 Meike de With (meike.de.with@desy.de)
--------------------------------------------------------------------

Release V00-10-00

* Make it possible to import FITStable from clsim
* Pad out knots vector as done in readsplinefitstable(), fixing a rare
  segfault in test_single_basis_vs_multi
* Small code changes to fix warnings
* Keep track of the GeometryType enum

  -- Jakob van Santen

* Move the .fits tables to I3_TESTDATA and find them there

  -- Don la Dieu

* Fix error message in test

  -- Alex Olivas

December 9, 2014 Meike de With (meike.de.with@desy.de)
--------------------------------------------------------------------

Release V00-09-01

* Disable doxygen until its cyclic dependency can be fixed

  -- Don la Dieu

* Expose gradient evaluation in I3SplineTable and document it

  -- Jakob van Santen


September 23, 2014 Meike de With (meike.de.with@desy.de)
--------------------------------------------------------------------

Release V00-09-00
