@@ -7,6 +7,9 @@ Release Notes
 
 Trunk
 
+* Fix a bug in splinetable_convolve that filled parts of the transfer matrix
+  that should have been zero with (occasionally negative) garbage. Convolution
+  now preserves monotonicity, as advertised.
 * Make ndsplineeval_deriv2() actually work, and add test for same
 * Add a regression test for cfitter
 * Update FITS detection to prefer astropy.io.fits
